9/13/11 change request: make all floating control panels the same width, looks better
9/13/11 turn off all mouse features except "rotate" in the Jmol viewer
9/13/11 scale Jmol dipoles by 0.8, so the molecular dipole isn't clipped by the Jmol viewer
9/13/11 swap EN values for atoms in diatomic molecule, so that turning on E-field is more likely to result in animation
9/13/11 make Jmol viewer as large as possible
9/13/11 adjust layout of "Real Molecules" play area
9/13/11 permanently remove E-field features from "Real Molecules" tab
# 0.00.20 (56383) Sep 10, 2011
9/8/11 decrease perpendicular offset of 2D bond dipoles
# 0.00.19 (56333) Sep 8, 2011
9/8/11 join clipped cloud shapes at center of bond in 2D electrostatic potential
9/8/11 temporarily hide E-field features in "Real Molecules" tab, for interview version
9/8/11 factor out duplicate code in DiatomicElectrostaticPotentialNode.updatePaint
9/8/11 set correct endpoints for gradient in 2D electrostatic potential
9/8/11 add Bond.getLength, useful in 2D isosurface computations
9/8/11 first pass at gradient paints for 2D electrostatic potential (path clipping is incorrect, gradient endpoints are a little off)
9/8/11 update 2D isosurfaces only when they're visible
9/7/11 implement simple color change for electrostatic potential, based on polarity
9/7/11 handle neutral polarity specially in electron density gradient, tweak alpha
9/7/11 account for molecule transform when creating electron density gradient
9/7/11 first pass at 2D electron density isosurface, does not account for molecule rotation
9/7/11 prepare separate classes for 2D representations of electrostatic potential and electron density
# 0.00.18 (56228) Sep 6, 2011
9/6/11 fix sign on partial charges
8/24/11 remove bad code from MPCanvas.updateLayout that was interfering with CenteredStage transform strategy
8/24/11 add stage bounds node, for layout debugging
8/24/11 convert rotate cursor to 32x32 gif, to work around Windows/Java bug #4842475